--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "codespace-proxy-starter",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Starter proxy server that runs in a Codespace. One private proxy per Codespace instance.",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "generate-token": "node -e \"console.log(require('crypto').randomBytes(24).toString('hex'))\""
   },
   "author": "copilot",
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-proxy": "^1.18.1",
     "morgan": "^1.10.0"
