--- a/env.example
+++ b/env.example
@@ -1,5 +1,7 @@
+```bash
 # Copy to .env in your Codespace or set as Codespaces environment variable.
-# A strong secret token required to call /api/config. This MUST be set.
+# IMPORTANT: Do NOT commit this file to git. Treat ADMIN_TOKEN like any secret.
+# Example:
 ADMIN_TOKEN=changeme-REPLACE_THIS
-# Server port (Codespaces normally exposes port 8080 by default)
 PORT=8080
+```
